--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@
 systemProp.http.proxyHost=wwwproxy.se.axis.com
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=3128
+systemProp.https.proxyHost=wwwproxy.se.axis.com
+systemProp.https.proxyPort=3218
